[package]
name = "fping-rust"
version = "5.5.0"
description = "High-performance ping tool"
license = "GPL-3.0-or-later"
edition = "2024"

[lib]
name = "fping"
path = "src/lib.rs"

[[bin]]
name = "fping"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
dns-lookup = "2"
libc = "0.2"
chrono = "0.4"
serde_json = "1"